[gd_scene load_steps=5 format=3 uid="uid://n12c0ya8ojtw"]

[ext_resource type="Script" path="res://Scripts/Menu/Instructions.gd" id="1_1u6el"]
[ext_resource type="Texture2D" uid="uid://4qbmd71xgdv2" path="res://Assets/Menu/MenuButton.png" id="2_qmpnc"]
[ext_resource type="Texture2D" uid="uid://yq0jvol8adc8" path="res://Assets/Menu/icono_casa.png" id="3_8y4x4"]
[ext_resource type="LabelSettings" uid="uid://d0qoogkaxht5h" path="res://fonts/ButtonLabel.tres" id="3_6672g"]

[node name="MenuInstruccion" type="Node2D" node_paths=PackedStringArray("container")]
script = ExtResource("1_1u6el")
container = NodePath("")

[node name="background" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Cards" type="TouchScreenButton" parent="."]
position = Vector2(46, 2)
texture_normal = ExtResource("2_qmpnc")

[node name="Label" type="Label" parent="Cards"]
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.293
anchor_right = 0.881
anchor_bottom = 0.784
offset_left = 0.128
offset_top = 0.0119972
offset_right = -0.108017
offset_bottom = 0.0559921
text = "Cards"
label_settings = ExtResource("3_6672g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemies" type="TouchScreenButton" parent="."]
position = Vector2(406, 2)
texture_normal = ExtResource("2_qmpnc")

[node name="Label" type="Label" parent="Enemies"]
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.276
anchor_right = 0.881
anchor_bottom = 0.767
offset_left = 0.128
offset_top = -0.0160027
offset_right = -0.108017
offset_bottom = 0.0279999
text = "Enemies"
label_settings = ExtResource("3_6672g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speciality" type="TouchScreenButton" parent="."]
position = Vector2(769, 2)
texture_normal = ExtResource("2_qmpnc")

[node name="Label" type="Label" parent="Speciality"]
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.267
anchor_right = 0.896
anchor_bottom = 0.759
offset_left = -0.0480003
offset_top = 0.027998
offset_right = -0.128006
offset_bottom = -0.0440063
text = "Specialities"
label_settings = ExtResource("3_6672g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TouchScreenButton" parent="."]
position = Vector2(1069, 35)
scale = Vector2(0.0778443, 0.0767327)
texture_normal = ExtResource("3_8y4x4")

[node name="Container" type="Container" parent="."]
offset_left = 10.0
offset_top = 134.0
offset_right = 1138.0
offset_bottom = 636.0

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(250, 250)
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[connection signal="pressed" from="Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="Enemies" to="." method="_on_enemies_pressed"]
[connection signal="pressed" from="Speciality" to="." method="_on_specialiy_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
